objects/FSP_GP_Lookup__c.object
<CustomObject>
    <fields>
        <fullName>DBE_WH__c</fullName>
        <description>DBE/WH</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DBE_WH</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSP_GP__c</fullName>
        <description>Full Service Producer and General Producer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FSP_GP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax_Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_50_RecordType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>2-50 RecordType</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X51_RecordType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>51+ RecordType</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <description>Used to look up Full Service Producer/General Producer, DBE Wharehouse Name, or Tax ID</description>
    <label>FSP_GP_Lookup</label>
    <nameField>
        <displayFormat>FSP/GP-{0000}</displayFormat>
        <label>FSP_GP_Lookup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FSP_GP_Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FSP_GP__c</columns>
        <columns>Tax_Id__c</columns>
        <columns>DBE_WH__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>